--- a/main.html
+++ b/main.html
@@ -3,11 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="ASCII art creator. Upload your image and get the ASCII map. Paste it directly in your codes or log files."
+    />
+    <meta
+      name="keywords"
+      content="ASCII, ASCII-art, art, code-signature, sign your code,GitHub,Code,Sameer,Tuteja"
+    />
+    <meta name="author" content="Sameer Tuteja" />
     <title>ASCII Art</title>
   </head>
   <body style="display: none" id="body">
     <div>
       <h2>GET ASCII ART FOR YOUR CODES OR GIT PROFILES</h2>
+      <h3>For demo, check your console log.</h3>
+      <h3>Improved interface coming soon!!!</h3>
       <div class="inputoutput">
         <img style="display: none" id="imageSrc" alt="No Image" />
         <div class="caption">
