--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="caption">Output ASCII text</div>
     </div>
     <div style="border-style: solid; border-radius: 16px; display: inline-block">
-      <p><code id="outputDemo" style="white-space: pre-wrap"></code></p>
+      <p><code id="outputDemo" style="white-space: pre"></code></p>
     </div>
 
     <script async src="https://docs.opencv.org/4.9.0/opencv.js" type="text/javascript"></script>
