--- a/index.html
+++ b/index.html
@@ -19,55 +19,132 @@
       <h2>GET ASCII ART FOR YOUR CODES OR GIT PROFILES</h2>
       <h3>For demo, check your console log.</h3>
       <h3>Improved interface coming soon!!!</h3>
+      <hr />
       <div class="inputoutput">
         <img style="display: none" id="imageSrc" alt="No Image" />
         <div class="caption">
           Open image <input type="file" accept="image/png, image/jpeg" id="fileInput" name="file" />
         </div>
       </div>
-      <div class="inputoutput">
-        <canvas id="canvasOutput"></canvas>
+      <div
+        class="inputoutput"
+        style="display: flex; max-width: 90vw; height: 50vh; overflow: hidden"
+      >
+        <canvas id="canvasOutput" style="flex-shrink: 0"></canvas>
       </div>
+      <hr />
       <div>
-        Threshold Value
-        <input
-          type="range"
-          id="th_value"
-          name="th_value"
-          min="0"
-          max="255"
-          value="127"
-          oninput="updateASCIIart()"
-        />
         <br />
-        Number of columns for text output
-        <input type="number" id="reqColumns" min="10" value="50" onchange="resizeImage()" />
+        <button type="button" onclick="advancedOptions()">Advanced Options</button>
         <br />
-        Character for light space.
-        <input
-          type="text"
-          id="lightSpaceChar"
-          maxlength="1"
-          value="#"
-          onchange="updateASCIIart()"
-        />
+        <div id="divNormFeatures" style="display: block">
+          Threshold Value
+          <input
+            type="range"
+            id="th_value"
+            name="th_value"
+            min="0"
+            max="255"
+            value="127"
+            oninput="updateASCIIart()"
+          />
+          <br />
+        </div>
+        <div id="divAdvFeatures" style="display: none">
+          Type
+          <select id="thType" onchange="updateASCIIart()">
+            <option value="0" label="Mean">cv.ADAPTIVE_THRESH_MEAN_C</option>
+            <option value="1" label="Gaussian">cv.ADAPTIVE_THRESH_GAUSSIAN_C</option>
+          </select>
+          <br />
+          Block Size
+          <input
+            type="range"
+            id="blockSize"
+            name="blockSize"
+            min="3"
+            step="2"
+            max="99"
+            value="3"
+            oninput="updateASCIIart()"
+          />
+          <br />
+          Constant Value
+          <input
+            type="range"
+            id="constant_c"
+            name="constant_c"
+            min="-30"
+            step="1"
+            max="+30"
+            value="1"
+            oninput="updateASCIIart()"
+          />
+        </div>
         <br />
-        Character for dark space.
-        <input type="text" id="darkSpaceChar" maxlength="1" value=" " onchange="updateASCIIart()" />
-        <br />
-        Character to separate white and dark space.
-        <input type="text" id="delimiterChar" maxlength="1" value="," onchange="updateASCIIart()" />
+        <hr />
+        <div>
+          Number of columns for text output
+          <input type="number" id="reqColumns" min="10" value="50" onchange="resizeImage()" />
+          <br />
+          Character for light space.
+          <input
+            type="text"
+            id="lightSpaceChar"
+            maxlength="1"
+            value="#"
+            onchange="updateASCIIart()"
+          />
+          <br />
+          Character for dark space.
+          <input
+            type="text"
+            id="darkSpaceChar"
+            maxlength="1"
+            value=" "
+            onchange="updateASCIIart()"
+          />
+          <br />
+          Character to separate white and dark space.
+          <input
+            type="text"
+            id="delimiterChar"
+            maxlength="1"
+            value=","
+            onchange="updateASCIIart()"
+          />
+        </div>
       </div>
     </div>
-    <div style="padding: 15px">
+    <hr />
+    <div style="padding-bottom: 15px">
       <button type="button" onclick="copyToClipboard()">Copy to clipboard</button>
       <div class="caption">Output ASCII text</div>
+      <div id="outputSizeInfo"></div>
     </div>
-    <div style="border-style: solid; border-radius: 16px; display: inline-block">
-      <p><code id="outputDemo" style="white-space: pre"></code></p>
+    <!-- <div style="max-width: 90vw; max-height: 70vh; overflow: hidden"> -->
+    <div
+      style="
+        border-style: solid;
+        border-radius: 16px;
+        display: inline-block;
+        padding: 15px;
+        /* max-width: 90vw; */
+        /* max-height: 50vh; */
+        /* transform-origin: 0% 0% 0px; */
+        /* transform: scale(0.1); */
+      "
+    >
+      <p style="font-size: 1.5vw">
+        <code id="outputDemo" style="white-space: pre"></code>
+      </p>
     </div>
-
+    <!-- </div> -->
     <script async src="https://docs.opencv.org/4.9.0/opencv.js" type="text/javascript"></script>
     <script src="script.js"></script>
   </body>
 </html>
+
+<!-- https://stackoverflow.com/questions/14142378/how-can-i-fill-a-div-with-an-image-while-keeping-it-proportional -->
+<!-- https://stackoverflow.com/questions/43692714/how-to-zoom-container-div-and-all-its-contents-to-a-specific-size -->
+<!-- https://stackoverflow.com/questions/14431411/pure-css-to-make-font-size-responsive-based-on-dynamic-amount-of-characters -->
