--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         /* transform: scale(0.1); */
       "
     >
-      <p style="font-size: 1.5vw">
+      <p id="contentPblock">
         <code id="outputDemo" style="white-space: pre"></code>
       </p>
     </div>
