--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 
       <div class="caption">Output ASCII text</div>
       <div id="outputSizeInfo"></div>
+      <button onclick="downloadImage()">Download as Image</button>
       <br />
       Resize output
       <input
@@ -173,6 +174,7 @@
     </div>
     <!-- </div> -->
     <script async src="https://docs.opencv.org/4.9.0/opencv.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
@@ -180,3 +182,5 @@
 <!-- https://stackoverflow.com/questions/14142378/how-can-i-fill-a-div-with-an-image-while-keeping-it-proportional -->
 <!-- https://stackoverflow.com/questions/43692714/how-to-zoom-container-div-and-all-its-contents-to-a-specific-size -->
 <!-- https://stackoverflow.com/questions/14431411/pure-css-to-make-font-size-responsive-based-on-dynamic-amount-of-characters -->
+
+<!-- https://codepen.io/koseare/pen/NWpMjeP -->
