--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         color: white;
       "
     ></code> -->
-    <div class="terminal">
+    <div id="outputDiv" class="terminal">
       <pre id="outputDemo"></pre>
       <!-- </p> -->
     </div>
