--- a/index.html
+++ b/index.html
@@ -111,6 +111,22 @@
             value=","
             onchange="updateASCIIart()"
           />
+          <br />
+          Color for Characters (only for representation)
+          <input
+            type="color"
+            id="favcolor"
+            value="#00ff00"
+            onchange="updateCharColor(this.value)"
+          />
+          <br />
+          Color for Background (only for representation)
+          <input
+            type="color"
+            id="favcolor"
+            value="#000000"
+            onchange="updateBackColor(this.value)"
+          />
         </div>
       </div>
     </div>
@@ -169,8 +185,10 @@
       "
     ></code> -->
     <div id="outputDiv" class="terminal">
+      <!-- <pre id="outputDemo"></pre> -->
       <pre id="outputDemo"></pre>
       <!-- </p> -->
+      <code id="saveFrame" style="display: none"></code>
     </div>
     <!-- </div> -->
     <script async src="https://docs.opencv.org/4.9.0/opencv.js" type="text/javascript"></script>
