--- a/index.html
+++ b/index.html
@@ -113,20 +113,22 @@
           />
           <br />
           Color for Characters (only for representation)
-          <input
+          <input type="text" value="#00ff00" data-coloris onchange="updateCharColor(this.value)" />
+          <!-- <input
             type="color"
             id="favcolor"
             value="#00ff00"
             onchange="updateCharColor(this.value)"
-          />
+          /> -->
           <br />
           Color for Background (only for representation)
-          <input
+          <!-- <input
             type="color"
             id="favcolor"
             value="#000000"
             onchange="updateBackColor(this.value)"
-          />
+          /> -->
+          <input type="text" value="#000000" data-coloris onchange="updateBackColor(this.value)" />
         </div>
       </div>
     </div>
@@ -193,6 +195,11 @@
     <!-- </div> -->
     <script async src="https://docs.opencv.org/4.9.0/opencv.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/mdbassit/Coloris@latest/dist/coloris.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/gh/mdbassit/Coloris@latest/dist/coloris.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
