--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
       <div id="Home" class="tabcontent" style="display: block">
         <h3>Home</h3>
         <h4>GET ASCII ART FOR YOUR CODES OR GIT PROFILES</h4>
-        <p>For demo, check your console log. Improved interface coming soon!!!</p>
+        <img src="extras/favicon.png" />
+        <!-- <p>For demo, check your console log. Improved interface coming soon!!!</p> -->
       </div>
 
       <div id="Source" class="tabcontent">
